# STM_Template_VSC

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile
inc/: gpio.h  main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  system_clock.h  usart.h
src/: gpio.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  system_clock.c  usart.c
test/: CMakeLists.txt  module1_test.cpp
